--- a/frontend/src/app/features/login/login.component.html
+++ b/frontend/src/app/features/login/login.component.html
@@ -1,1 +1,3 @@
-<p>login works!</p>
+<div class="wrapper" fxLayout="row" fxLayoutAlign="center center">
+  <button mat-flat-button (click)="signIn()">Sign in</button>
+</div>
