--- a/frontend/src/app/features/about/about.component.html
+++ b/frontend/src/app/features/about/about.component.html
@@ -1,3 +1,29 @@
-<div class="container">
+<!-- <div class="container">
   <h2>Details page</h2>
-</div>
+  <mat-card>
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>{{(user$ | async).name}}</mat-card-title>
+      <mat-card-subtitle>{{(user$ | async).email}}</mat-card-subtitle>
+      <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    </mat-card-header>
+
+    <mat-card-content>
+      <p>
+        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+        bred for hunting.
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions>
+  </mat-card>
+</div> -->
+
+<mat-card>{{(user$ | async).name}}</mat-card>
+<mat-card>{{(user$ | async).email}}</mat-card>
+<mat-card>
+  <img [src]="(user$ | async).imageUrl" alt="Profile photo">
+</mat-card>
